[package]
name = "envoke-cli"
version = "1.10.1"
edition = "2024"
repository = "https://github.com/glennib/envoke"
description = "Resolve variables from literals, commands, scripts, and templates - output as env vars, .env files, or custom formats"
license = "MIT OR Apache-2.0"
authors = ["Glenn Bitar <glennbitar@gmail.com>"]

[[bin]]
name = "envoke"
path = "src/main.rs"

[dependencies]
miette = { version = "7", features = ["fancy"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
clap_complete = "4.5"
minijinja = { version = "2.15.1", features = ["urlencode", "json"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
